fix(config): implement tdgMode and verificationMode settings
- Config loading now properly extracts both settings from settings.json
- Phase 1c TDG delegation implemented (test generation)
- Phase 1d Verification integrated (intent/coverage/overfitting checks)
- Removed dead code qualityGatesEnabled setting
- Updated Phase 3.75 references to Phase 1d

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ __pycache__/
 
 # OS files
 desktop.ini
+
+# Claude settings
+.claude/settings.local.json  # Local overrides
+.claude/.env*               # Secrets
